styles/globals.css
/* ... */
@media (min-width: 768px) {
  .filter-search-form-2 .button-block {
    margin-top: 0;
  }
}

.filter-search-form-2 .btn-submit {
  justify-content: center;
  align-items: center;
  display: flex;
}

.nice-select {
  display: flex;
  align-items: center;
}

.nice-select .current {
  line-height: 1;
}

.nice-select .list {
  width: 100%;
}

.nice-select:active,
.nice-select.open,
.nice-select:focus {
  border-color: rgba(0, 176, 116, 0.22) !important;
}

.nice-select.rounded-8 {
  border-radius: 8px !important;
}

.nice-select.arrow-2:after {
  border-width: 5px;
  border-color: #000 transparent transparent transparent;
  border-style: solid;
  display: block;
  height: 5px;
  width: 5px;
  margin-top: -2.5px;
  transform-origin: 40% 23%;
  transform: rotate(0deg);
}

.nice-select.arrow-2.open:after {
  transform: rotate(180deg);
}

.nice-select.arrow-3:after {
  right: 16px;
  height: 6px;
  width: 6px;
  border-color: #7e8989;
}

.nice-select.arrow-3.open:after {
  transform: rotate(225deg);
}

.nice-select.arrow-3-black:after {
  border-color: #2b3940;
}

.nice-select.arrow-4:after {
  right: 13px;
  height: 5px;
  width: 5px;
  font-size: 15px;
  border-color: #7e8989;
  top: 50%;
}

.nice-select.arrow-4.open:after {
  transform: rotate(225deg);
}

.nice-select.arrow-4-black:after {
  border-color: #2b3940;
}

.arrow-box-dropdown:after {
  border-width: 5px;
  border-color: #000 transparent transparent transparent;
  border-style: solid;
  display: block;
  height: 5px;
  width: 5px;
  margin-top: -2.5px;
  transform-origin: 40% 23%;
  transform: rotate(0deg);
  pointer-events: none;
  position: absolute;
  right: 12px;
  top: 50%;
  content: "";
}

.arrow-box-dropdown.open:after {
  transform: rotate(180deg);
}

/* Login Modal form */
/* drag and drop css for Dashboard-settings page start */
.error {
  color: #b71c1c;
}

#userActions {
  flex-direction: column;
  text-align: center;
  color: #37474f;
  background: url(../public/image/svg/upload-file.svg);
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 10px;
  position: relative;
}

#imgPrime {
  max-width: 140px;
  height: auto;
  margin: 0 auto;
  display: inline-block;
  margin-top: 20px;
}

#imgPrime {
  display: none;
}

/* drag and drop css for Dashboard-settings page end */
.show-password:before {
  content: "\f06e";
}

.show-password.show:before {
  content: "\f070";
}

.search-2-adjustment .nice-select .current {
  width: 80%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* ---------------------------
  01.Component -> { Cards } 
------------------------------*/
.feature-cardOne-adjustments {
  min-height: 250px;
  height: 100%;
}
.feature-cardOne-adjustments .job_title {
  max-height: 45px;
  height: 100%;
}

.feature-cardOne-adjustments .job_summary {
  /* max-height: 150px; */
  height: 90px;
}
.feature-cardOne-adjustments .card-tag-list {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  margin-left: -6px;
  margin-right: -6px;
}

.feature-cardOne-adjustments .card-tag-list li {
  min-width: 104px;
}

@media (min-width: 480px) {
  .feature-cardOne-adjustments .card-tag-list li {
    min-width: calc(33.3333% - 12px);
  }
}

@media (min-width: 992px) {
  .feature-cardOne-adjustments .card-tag-list li {
    min-width: 104px;
  }
}

@media (min-width: 1200px) {
  .feature-cardOne-adjustments .card-tag-list li {
    min-width: calc(33.3333% - 12px);
  }
}

.feature-cardOne-adjustments .card-tag-list li a {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 5px;
  margin-bottom: 10px;
  margin-left: 6px;
  margin-right: 6px;
  height: 32px;
}

.feature-cardOne-adjustments .card-btn-group {
  display: flex;
  flex-wrap: wrap;
  margin-left: -8px;
  margin-right: -8px;
  max-height: 50px;
  height: 100%;
}

.feature-cardOne-adjustments .card-btn-group .btn {
  margin-left: 8px;
  margin-right: 8px;
  min-width: calc(100% - 16px);
  margin-bottom: 10px;
}

@media (min-width: 370px) {
  .feature-cardOne-adjustments .card-btn-group .btn {
    min-width: calc(50% - 16px);
  }
}

@media (min-width: 992px) {
  .feature-cardOne-adjustments .card-btn-group .btn {
    min-width: calc(100% - 16px);
  }
}

@media (min-width: 1200px) {
  .feature-cardOne-adjustments .card-btn-group .btn {
    min-width: calc(50% - 16px);
  }
}

/* ---------------------------
  01.Component -> { Modal } 
------------------------------*/
.modal.show .modal-dialog {
  pointer-events: visible;
}

@media only screen and (min-height: 775px) {
  .form-modal.modal {
    align-items: center;
    display: flex !important;
    pointer-events: none;
  }
  .form-modal.modal.show {
    pointer-events: visible;
  }
}

/* ---------------------------
  01.Component -> { Tab } 
------------------------------*/
.search-nav-tab .active {
  background-color: transparent !important;
  border: 0;
}

.search-nav-tab .active > div {
  border-color: #1292ee;
}

/* ---------------------------
  01.Component -> { Acccordion } 
------------------------------*/
.accordion-trigger.arrow-icon {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.accordion-trigger.arrow-icon:after {
  content: "\ea05";
  font-family: "Grayic";
  font-size: 20px;
  display: block;
  line-height: 1;
  transform: rotate(0deg);
  transition: 0.4s;
  color: #1292ee;
  top: 2px;
  position: relative;
}

.accordion-trigger.arrow-icon[aria-expanded="true"]:after {
  transform: rotate(-180deg);
}

/* ---------------------------
  01.Component -> { Sidebar } 
------------------------------*/
.dashboard-sidebar-wrapper {
  width: 290px;
  height: 100vh;
  position: fixed;
  left: 0;
  top: 0;
  background: var(--bg);
  transform: translateX(-100%);
  transition: 0.4s transform;
  z-index: 800;
}

@media (min-width: 768px) {
  .dashboard-sidebar-wrapper {
    transform: none;
  }
}

.dashboard-sidebar-wrapper.show {
  transform: translateX(0%);
}
/* ... */

